--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -20,16 +20,19 @@ h2 {
 span {
   background: #ffffff;
 }
+  .Evan {
+    padding-left:5em
+  }
 </style>
 
 <p>&nbsp;</p>
 <h1 style="text-align: center;">Evan Adolph</h1>
 <p style="text-align: center;"><img src="https://evanadolph.github.io/myfirstrepository/EvanResume.jpg" alt="This is Evan celebrating after a lacrosse goal" width="203" height="128"></p>
 <hr />
-<h3>Contact Information:</h3>
+<h3 class="Evan">Contact Information:</h3>
 <p>18 Partridge Road, Medfield Massachusetts <br /> evanadolph@gmail.com<br />(508)-850-5706</p>
 <p>Advisor: Stephanie Worthley<br />sworthley@email.medfield.net</p>
-<h3>Work Experience:</h3>
+<h3 class="Evan">Work Experience:</h3>
 <h4>Massachusetts Bays Certified Soccer Referee</h4>
 <ul>
 <li>Dover-Sherborn (Grades 5-7)</li>
@@ -50,7 +53,7 @@ span {
 <li>St. Edwards Community Service Group</li>
 <li>Faith in Action Teens (St. Edwards Church)</li>
 </ul>
-<h3>Extracuricular:</h3>
+<h3 class="Evan">Extracuricular:</h3>
 <h4>Sports</h4>
 <ul>
 <li>Medfield HS Lacrosse</li>
@@ -64,14 +67,14 @@ span {
 <li>Medfield Student Council Representative</li>
 <li>Best Buddies Program</li>
 </ul>
-<h3>Academics:</h3>
+<h3 class="Evan">Academics:</h3>
 <ul>
 <li>Medfield Public High School</li>
 <li>Freshman; Class of 2021</li>
 <li>Three Year Academic Recognition</li>
 <li>2/4 Honor Classes</li>
 </ul>
-<h3>Skills:</h3>
+<h3 class="Evan">Skills:</h3>
 <h4>Computer Skills</h4>
 <ul>
 <li>JavaScript</li>
