--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -26,7 +26,7 @@ span {
 </style>
 
 <p>&nbsp;</p>
-<h1 style="text-align: center;">Evan Adolph</h1>
+<h1><center>Evan Adolph</center></h1>
 <p style="text-align: center;"><img src="https://evanadolph.github.io/myfirstrepository/EvanResume.jpg" alt="This is Evan celebrating after a lacrosse goal" width="203" height="128"></p>
 <hr />
 <h3 class="Evan">Contact Information:</h3>
