--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -23,10 +23,13 @@ span {
   .Evan {
     padding-left:3em
   }
+  .center {
+    text-align: center;
+  }
 </style>
 
 <p>&nbsp;</p>
-<h1><center>Evan Adolph</center></h1>
+<h1 class="center">Evan Adolph</h1>
 <p style="text-align: center;"><img src="https://evanadolph.github.io/myfirstrepository/EvanResume.jpg" alt="This is Evan celebrating after a lacrosse goal" width="203" height="128"></p>
 <hr />
 <h3 class="Evan">Contact Information:</h3>
