--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -56,9 +56,20 @@ span {
 <li>Christmas in the City (Boston)</li>
 <li>Cradles to Crayons</li>
 <li>St. Edwards Community Service Group</li>
-<li>Faith in Action Teens (St. Edwards Church)</li>
+<li><strong>Faith in Action Teens (F.I.A.T)</strong></li>
+<li>Right Hand Man for Miss Amazing Pagent</li>
+</ul>
+<h4>FIAT St. Edwards</h4>
+<ul>
+  <li>Helping Hands Meal Making (participant)</li>
+  <li>Father Bill's Sandwich Making(Organizer and Leader)</li>
 </ul>
 <h3 class="Evan">Extracuricular:</h3>
+<h4>Clubs</h4>
+<ul>
+<li>Medfield Student Council Representative</li>
+<li>Best Buddies Program</li>
+</ul>
 <h4>Sports</h4>
 <ul>
 <li>Medfield HS Lacrosse</li>
@@ -67,17 +78,13 @@ span {
 <li>BAYS Soccer Team</li>
 <li>Forekicks Indoor Soccer</li>
 </ul>
-<h4>Clubs</h4>
-<ul>
-<li>Medfield Student Council Representative</li>
-<li>Best Buddies Program</li>
-</ul>
 <h3 class="Evan">Academics:</h3>
 <ul>
 <li>Medfield Public High School</li>
 <li>Freshman; Class of 2021</li>
 <li>Three Year Academic Recognition</li>
 <li>2/4 Honor Classes</li>
+<li>Recognition from ADL Peer Leader Program</li>
 </ul>
 <h3 class="Evan">Skills:</h3>
 <h4>Computer Skills</h4>
