--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -7,12 +7,10 @@
   font-family: monaco, monospace;
  
 }
-h1, h2 {
+h2 {
   background: #fff;
 }
-h1 {
-  font-size: 30px
-}
+  
 h2 {
   font-size: 20px;
 }
@@ -25,6 +23,7 @@ span {
   .center {
     color: blue;
     text-align: center;
+    font-size: 30px;
   }
 
 </style>
