--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -48,7 +48,7 @@ span {
 <li>Youth Lacrosse Mentor</li>
 <li>Youth Indoor Soccer Coach</li>
 </ul>
-<h4>Community Service</h4>
+<h3>Community Service:</h3>
 <ul>
 <li>Over 40+ hours of community service</li>
 <li>Christmas in the City (Boston)</li>
@@ -84,8 +84,7 @@ span {
 <li>2/4 Honor Classes</li>
 <li>Recognition from ADL Peer Leader Program</li>
 </ul>
-<h3 class="Evan">Skills:</h3>
-<h4>Computer Skills</h4>
+<h3>Computer Skills:</h3>
 <ul>
 <li>JavaScript</li>
 <li>HTML</li>
