--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -25,7 +25,13 @@ span {
     text-align: center;
     font-size: 30px;
   }
-
+div {
+    border: 3px solid black;
+    padding-top: 1px;
+    padding-right: 1px;
+    padding-bottom: 1px;
+    padding-left: 1px;
+}
 </style>
 
 <p>&nbsp;</p>
@@ -33,9 +39,8 @@ span {
 <p style="text-align: center;"><img src="https://evanadolph.github.io/myfirstrepository/EvanResume.jpg" alt="This is Evan celebrating after a lacrosse goal" width="203" height="128"></p>
 <hr />
 <h3 class="Evan">Contact Information:</h3>
-<p>18 Partridge Road, Medfield Massachusetts <br /> evanadolph@gmail.com<br />(508)-850-5706</p>
-<p>Advisor: Stephanie Worthley<br />sworthley@email.medfield.net</p>
-<h3 class="Evan">Work Experience:</h3>
+<p><div style="background-color:red">18 Partridge Road, Medfield Massachusetts <br /> evanadolph@gmail.com<br />(508)-850-5706 <br/>Advisor: Stephanie Worthley<br />sworthley@email.medfield.net</div></p>
+<div><h3 class="Evan">Work Experience:</h3>
 <h4>Massachusetts Bays Certified Soccer Referee</h4>
 <ul>
 <li>Dover-Sherborn (Grades 5-7)</li>
@@ -48,6 +53,9 @@ span {
 <li>Youth Lacrosse Mentor</li>
 <li>Youth Indoor Soccer Coach</li>
 </ul>
+</div>
+<br/>
+<div>
 <h3>Community Service:</h3>
 <ul>
 <li>Over 40+ hours of community service</li>
@@ -62,10 +70,13 @@ span {
   <li>Helping Hands Meal Making (participant)</li>
   <li>Father Bill's Sandwich Making(Organizer and Leader)</li>
 </ul>
+</div>
+<br/>
+<div>
 <h3 class="Evan">Extracuricular:</h3>
 <h4>Clubs</h4>
 <ul>
-<li>Medfield Student Council Representative</li>
+<li><strong>Medfield Student Council Representative</strong></li>
 <li>Best Buddies Program</li>
 </ul>
 <h4>Sports</h4>
@@ -76,14 +87,20 @@ span {
 <li>BAYS Soccer Team</li>
 <li>Forekicks Indoor Soccer</li>
 </ul>
+</div>
+<br/>
+<div>
 <h3 class="Evan">Academics:</h3>
 <ul>
 <li>Medfield Public High School</li>
 <li>Freshman; Class of 2021</li>
 <li>Three Year Academic Recognition</li>
 <li>2/4 Honor Classes</li>
-<li>Recognition from ADL Peer Leader Program</li>
+<li><strong>Recognition from ADL Peer Leader Program</strong></li>
 </ul>
+</div>
+<br/>
+<div>
 <h3>Computer Skills:</h3>
 <ul>
 <li>JavaScript</li>
@@ -94,4 +111,5 @@ span {
 <li>Excel</li>
 <li>Words</li>
 </ul>
+</div>
 <p>&nbsp;</p>
