--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -35,7 +35,7 @@ div {
 </style>
 
 <p>&nbsp;</p>
-<div style="background-color:red"><h1 class="center">Evan Adolph</h1>
+<h1 class="center">Evan Adolph</h1><div style="background-color:red">
 <p style="text-align: center;"><img src="https://evanadolph.github.io/myfirstrepository/EvanResume.jpg" alt="This is Evan celebrating after a lacrosse goal" width="203" height="128"></p>
 <hr />
 <h3 class="Evan">Contact Information:</h3>
