--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -35,10 +35,10 @@ div {
 </style>
 
 <p>&nbsp;</p>
-<h1 class="center">Evan Adolph</h1><div style="background-color:red">
+<h1 class="center">Evan Adolph</h1>
 <p style="text-align: center;"><img src="https://evanadolph.github.io/myfirstrepository/EvanResume.jpg" alt="This is Evan celebrating after a lacrosse goal" width="203" height="128"></p>
 <hr />
-<h3 class="Evan">Contact Information:</h3>
+<div style="background-color:red"><h3 class="Evan">Contact Information:</h3>
 <p>18 Partridge Road, Medfield Massachusetts <br /> evanadolph@gmail.com<br />(508)-850-5706 <br/>Advisor: Stephanie Worthley<br />sworthley@email.medfield.net</p></div><br/>
 <div><h3 class="Evan">Work Experience:</h3>
 <h4>Massachusetts Bays Certified Soccer Referee</h4>
