--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -28,9 +28,12 @@ span {
 div {
     border: 3px solid black;
     padding-top: 1px;
-    padding-right: 1px;
+    padding-right: 5px;
     padding-bottom: 1px;
     padding-left: 1px;
+}
+textarea {
+   resize: none;
 }
 </style>
 
@@ -40,6 +43,10 @@ div {
 <hr />
 <div style="background-color:red"><h3 class="Evan">Contact Information:</h3>
 <p>18 Partridge Road, Medfield Massachusetts <br /> evanadolph@gmail.com<br />(508)-850-5706 <br/>Advisor: Stephanie Worthley<br />sworthley@email.medfield.net</p></div><br/>
+<div><h3>About Me:</h3><textarea rows="4" cols="86">
+At w3schools.com you will learn how to make a website. We offer free tutorials in all web development technologies.
+</textarea>
+</div><br/>
 <div><h3 class="Evan">Work Experience:</h3>
 <h4>Massachusetts Bays Certified Soccer Referee</h4>
 <ul>
