--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -43,8 +43,8 @@ textarea {
 <hr />
 <div style="background-color:red"><h3 class="Evan">Contact Information:</h3>
 <p>18 Partridge Road, Medfield Massachusetts <br /> evanadolph@gmail.com<br />(508)-850-5706 <br/>Advisor: Stephanie Worthley<br />sworthley@email.medfield.net</p></div><br/>
-<div><h3>About Me:</h3><textarea rows="4" cols="180">
-At w3schools.com you will learn how to make a website. We offer free tutorials in all web development technologies.
+<div><h3>About Me:</h3><textarea rows="4" cols="200">
+I go to Medfield High School, I am in the ninth grade and my expected graduation year is 2021. I strive to be the best student and attend many courses that I hope to reference in the future. I also participate in lots of community service, some events taking the role as a participant or a cordinator. I am approachable, easygoing, kind, and determined when I take action in a task. My ability to be a role-model for peers is recognized and my influential and strong voice is clearly heard.
 </textarea>
 </div><br/>
 <div><h3 class="Evan">Work Experience:</h3>
