--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -35,6 +35,9 @@ div {
 textarea {
    resize: none;
 }
+.textSize {
+font-size:14px;
+}
 </style>
 
 <p>&nbsp;</p>
@@ -43,7 +46,7 @@ textarea {
 <hr />
 <div style="background-color:red"><h3 class="Evan">Contact Information:</h3>
 <p>18 Partridge Road, Medfield Massachusetts <br /> evanadolph@gmail.com<br />(508)-850-5706 <br/>Advisor: Stephanie Worthley<br />sworthley@email.medfield.net</p></div><br/>
-<div><h3>About Me:</h3><textarea rows="4" cols="185">
+<div><h3>About Me:</h3><textarea rows="3" cols="185" class="textSize">
 I go to Medfield High School, I am in the ninth grade and my expected graduation year is 2021. I strive to be the best student and attend many courses that I hope to reference in the future. I also participate in lots of community service, some events taking the role as a participant or a cordinator. I am approachable, easygoing, kind, and determined when I take action in a task. My ability to be a role-model for peers is recognized and my influential and strong voice is clearly heard. I enjoy passing time with family or friends, playing some of my favorite sports, playing videogames, and interacting with social media. Although, some of my interests and hobbies include, coding, drawing, photography, and math.
 </textarea>
 </div><br/>
@@ -120,3 +123,4 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </ul>
 </div>
 <p>&nbsp;</p>
+
