--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -66,7 +66,7 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </div>
 <br/>
 <div>
-<h3>Community Service:</h3>
+<h3 class="Evan">Community Service:</h3>
 <ul>
 <li>Over 40+ hours of community service</li>
 <li>Christmas in the City (Boston)</li>
@@ -111,7 +111,7 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </div>
 <br/>
 <div>
-<h3>Computer Skills:</h3>
+<h3> class="Evan"Computer Skills:</h3>
 <ul>
 <li>JavaScript</li>
 <li>HTML</li>
