--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -111,7 +111,7 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </div>
 <br/>
 <div>
-<h3> class="Evan"Computer Skills:</h3>
+<h3 class="Evan">Computer Skills:</h3>
 <ul>
 <li>JavaScript</li>
 <li>HTML</li>
