--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -41,16 +41,26 @@ font-size:14px;
 </style>
 
 <p>&nbsp;</p>
-<h1 class="center">Evan Adolph</h1>
+<h1 class="center"><em>Evan Adolph</em></h1>
 <p style="text-align: center;"><img src="https://evanadolph.github.io/myfirstrepository/EvanResume.jpg" alt="This is Evan celebrating after a lacrosse goal" width="203" height="128"></p>
 <hr />
 <div style="background-color:red"><h3 class="Evan">Contact Information:</h3>
 <p>18 Partridge Road, Medfield Massachusetts <br /> evanadolph@gmail.com<br />(508)-850-5706 <br/>Advisor: Stephanie Worthley<br />sworthley@email.medfield.net</p></div><br/>
-<div><h3>About Me:</h3><textarea rows="4" cols="150" class="textSize">
-I go to Medfield High School, I am in the ninth grade and my expected graduation year is 2021. I strive to be the best student and attend many courses that I hope to reference in the future. I also participate in lots of community service, some events taking the role as a participant or a cordinator. I am approachable, easygoing, kind, and determined when I take action in a task. My ability to be a role-model for peers is recognized and my influential and strong voice is clearly heard. I enjoy passing time with family or friends, playing some of my favorite sports, playing video games, and interacting with social media. Although, some of my interests and hobbies include, coding, drawing, photography, and math. My goal currently, is just to keep on improving all aspects of school and life in general!
+<div><h3><em>Directory:</em></h3>
+<ol>
+<li><a href="#am">About Me<a></li>
+<li><a href="#we">Work Experience<a></li>
+<li><a href="#cs">Community Service<a></li>
+<li><a href="#ex">Extracuricular<a></li>
+<li><a href="#ad">Academics<a></li>
+<li><a href="#comp">Computer Skills<a></li>
+</ol>
+</div><br/>
+<div><h3 id="am">About Me:</h3><textarea rows="4" cols="75" class="textSize">
+I go to Medfield High School, I am in the ninth grade and my expected graduation year is 2021. I strive to be the best student and attend many courses that I hope to reference in the future. I also participate in lots of community service, some events taking the role as a participant or a cordinator. I am approachable, easygoing, kind, and determined when I take action in a task. My ability to be a role-model for peers is recognized and my influential and strong voice is clearly heard. I enjoy passing time with family or friends, playing some of my favorite sports, playing videogames, and interacting with social media. Although, some of my interests and hobbies include, coding, drawing, photography, and math. My goal currently, is just to keep on improving all aspects of school and life in general!
 </textarea>
 </div><br/>
-<div><h3 class="Evan">Work Experience:</h3>
+<div><h3 class="Evan" id="we">Work Experience:</h3>
 <h4>Massachusetts Bays Certified Soccer Referee</h4>
 <ul>
 <li>Dover-Sherborn (Grades 5-7)</li>
@@ -66,7 +76,7 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </div>
 <br/>
 <div>
-<h3 class="Evan">Community Service:</h3>
+<h3 class="Evan" id="cs">Community Service:</h3>
 <ul>
 <li>Over 40+ hours of community service</li>
 <li>Christmas in the City (Boston)</li>
@@ -83,7 +93,7 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </div>
 <br/>
 <div>
-<h3 class="Evan">Extracuricular:</h3>
+<h3 class="Evan" id="ex">Extracuricular:</h3>
 <h4>Clubs</h4>
 <ul>
 <li><strong>Medfield Student Council Representative</strong></li>
@@ -100,7 +110,7 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </div>
 <br/>
 <div>
-<h3 class="Evan">Academics:</h3>
+<h3 class="Evan" id="ad">Academics:</h3>
 <ul>
 <li>Medfield Public High School</li>
 <li>Freshman; Class of 2021</li>
@@ -111,7 +121,7 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </div>
 <br/>
 <div>
-<h3 class="Evan">Computer Skills:</h3>
+<h3 class="Evan" id="comp">Computer Skills:</h3>
 <ul>
 <li>JavaScript</li>
 <li>HTML</li>
@@ -123,4 +133,3 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 </ul>
 </div>
 <p>&nbsp;</p>
-
