--- a/mynewestresume.html
+++ b/mynewestresume.html
@@ -56,7 +56,7 @@ font-size:14px;
 <li><a href="#comp">Computer Skills<a></li>
 </ol>
 </div><br/>
-<div><h3 id="am">About Me:</h3><textarea rows="4" cols="165" class="textSize">
+<div><h3 id="am">About Me:</h3><textarea rows="4" cols="160" class="textSize">
 I go to Medfield High School, I am in the ninth grade and my expected graduation year is 2021. I strive to be the best student and attend many courses that I hope to reference in the future. I also participate in lots of community service, some events taking the role as a participant or a coordinator. I am approachable, easygoing, kind, and determined when I take action in a task. My ability to be a role-model for peers is recognized and my influential and strong voice is clearly heard. I enjoy passing time with family or friends, playing some of my favorite sports, playing video games, and interacting with social media. Although, some of my interests and hobbies include, coding, drawing, photography, and math. My goal currently, is just to keep on improving all aspects of school and life in general!
 </textarea>
 </div><br/>
@@ -115,7 +115,7 @@ I go to Medfield High School, I am in the ninth grade and my expected graduation
 <li>Medfield Public High School</li>
 <li>Freshman; Class of 2021</li>
 <li>Three Year Academic Recognition</li>
-<li>2/4 Honor Classes</li>
+<li>Geometry & Biology Honor Classes</li>
 <li><strong>Recognition from ADL Peer Leader Program</strong></li>
 </ul>
 </div>
