--- a/java-in-html.html
+++ b/java-in-html.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>bar graph</title>
         
-        <script language = "javascript">
+        <script>
 $('[data-rating] .star').on('click', function() {
   var selectedCssClass = 'selected';
   var $this = $(this);
