--- a/java-in-html.html
+++ b/java-in-html.html
@@ -1,197 +1,733 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Best Overall Cities for Sports</title>
 <style>
-.container {
-    position: relative;
+    #boston{
+        background-color:red;
+    }
+    table{
+text-align: center;
+margin-left: auto;
+margin-right: auto;
 }
 
-.topleft {
-    position: absolute;
-    top: 100px;
-    left: 16px;
-    font-size: 18px;
-}
-.topright { 
-    position: absolute;
-    top: 100px;
-    right: 16px;
-    font-size: 18px;
-}
+table:after {
+      content: "";
+      background: url(https://images.fineartamerica.com/images-medium-large-5/boston-sports-fan-recycled-vintage-massachusetts-license-plate-art-patriots-red-sox-bruins-celtics-design-turnpike.jpg) repeat;
+      opacity: 0.3; 
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      z-index: -1;   
+    }
+
 </style>
-</head>
-<body>
-
-<p>&nbsp;</p>
-<h1 style="text-align: center;"><span style="color: #0000ff;">Boston</span> <span style="color: #008000;">Sports</span> <span style="color: #ffff00;">are</span> <span style="color: #ff0000;">the</span> Greatest!</h1>
-<table class="topleft" style="height: 784px; border-color: green; margin-left: auto; margin-right: auto; width: 271px;" border="3">
+<table border ="3" >
 <tbody>
-<tr style="height: 36px;">
-<td style="width: 139px; height: 36px;">Team:</td>
-<td style="width: 112px; height: 36px;">Number of NBA Championships</td>
+<tr>
+<th>Rank</th>
+<th>City</th>
+<th>Major League Baseball MLB</th>
+<th>National Basketball Association NBA</th>
+<th>NFL AFL AAFC</th>
+<th>NHL PCHA</th>
+<th>MLS</th>
+<th>Top 5 Overall Major League Championships</th>
+<th>Arena Football League</th>
+<th>MLL</th>
+<th>NLL</th>
 </tr>
-<tr style="height: 18px;">
-<td style="width: 139px; height: 18px;"><span style="color: #008000;"><strong>Boston Celtics</strong></span></td>
-<td style="width: 112px; height: 18px;"><span style="color: #008000;"><strong>17</strong></span></td>
+<tr>
+<td>1</td>
+<td>New York</td>
+<td>35</td>
+<td>2</td>
+<td>9</td>
+<td>8</td>
+<td>0</td>
+<td>54</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 36px;">
-<td style="width: 139px; height: 36px;">Los Angeles Lakers</td>
-<td style="width: 112px; height: 36px;">16</td>
+<tr id="boston">
+<td>2</td>
+<td>Boston</td>
+<td>9</td>
+<td>17</td>
+<td>5</td>
+<td>6</td>
+<td>0</td>
+<td>37</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
 </tr>
-<tr style="height: 18px;">
-<td style="width: 139px; height: 18px;">Chicago Bulls</td>
-<td style="width: 112px; height: 18px;">6</td>
+<tr>
+<td>3</td>
+<td>Chicago</td>
+<td>6</td>
+<td>6</td>
+<td>11</td>
+<td>6</td>
+<td>1</td>
+<td>30</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 36px;">
-<td style="width: 139px; height: 36px;">Golden State Warriors</td>
-<td style="width: 112px; height: 36px;">5</td>
+<tr>
+<td>4</td>
+<td>Los Angeles</td>
+<td>5</td>
+<td>11</td>
+<td>2</td>
+<td>2</td>
+<td>5</td>
+<td>25</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 36px;">
-<td style="width: 139px; height: 36px;">San Antonio Spurs</td>
-<td style="width: 112px; height: 36px;">5</td>
+<tr>
+<td>5</td>
+<td>Detroit</td>
+<td>4</td>
+<td>3</td>
+<td>4</td>
+<td>11</td>
+<td>-</td>
+<td>22</td>
+<td>4</td>
+<td>-</td>
+<td>2</td>
 </tr>
-<tr style="height: 18px;">
-<td style="width: 139px; height: 18px;">Detroit Pistons&nbsp;</td>
-<td style="width: 112px; height: 18px;">3</td>
+<tr>
+<td>6</td>
+<td>Philadelphia</td>
+<td>7</td>
+<td>4</td>
+<td>5</td>
+<td>2</td>
+<td>0</td>
+<td>18</td>
+<td>3</td>
+<td>3</td>
+<td>6</td>
 </tr>
-<tr style="height: 18px;">
-<td style="width: 139px; height: 18px;">Miami Heat</td>
-<td style="width: 112px; height: 18px;">3</td>
+<tr>
+<td>7</td>
+<td>Pittsburgh</td>
+<td>5</td>
+<td>-</td>
+<td>6</td>
+<td>5</td>
+<td>-</td>
+<td>16</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 36px;">
-<td style="width: 139px; height: 36px;">Philidelphia 76ers</td>
-<td style="width: 112px; height: 36px;">3</td>
+<tr>
+<td>8-T</td>
+<td>Green Bay</td>
+<td>-</td>
+<td>-</td>
+<td>13</td>
+<td>-</td>
+<td>-</td>
+<td>13</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 18px;">
-<td style="width: 139px; height: 18px;">Houston Rockets</td>
-<td style="width: 112px; height: 18px;">2</td>
+<tr>
+<td>8-T</td>
+<td>St. Louis</td>
+<td>11</td>
+<td>1</td>
+<td>1</td>
+<td>0</td>
+<td>-</td>
+<td>13</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 18px;">
-<td style="width: 139px; height: 18px;">New York Knicks</td>
-<td style="width: 112px; height: 18px;">2</td>
+<tr>
+<td>8-T</td>
+<td>Cleveland</td>
+<td>2</td>
+<td>1</td>
+<td>10</td>
+<td>-</td>
+<td>-</td>
+<td>13</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 18px;">
-<td style="width: 139px; height: 18px;">Atlanta Hawks</td>
-<td style="width: 112px; height: 18px;">1</td>
+<tr>
+<td>11</td>
+<td>Washington, D.C.</td>
+<td>1</td>
+<td>1</td>
+<td>5</td>
+<td>0</td>
+<td>4</td>
+<td>11</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 36px;">
-<td style="width: 139px; height: 36px;">Cleveland Cavaliers</td>
-<td style="width: 112px; height: 36px;">1</td>
+<tr>
+<td>12</td>
+<td>San Francisco</td>
+<td>3</td>
+<td>2</td>
+<td>5</td>
+<td>-</td>
+<td>-</td>
+<td>10</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 18px;">
-<td style="width: 139px; height: 18px;">Dallas Mavericks</td>
-<td style="width: 112px; height: 18px;">1</td>
+<tr>
+<td>13-T</td>
+<td>Baltimore</td>
+<td>3</td>
+<td>1</td>
+<td>5</td>
+<td>-</td>
+<td>-</td>
+<td>9</td>
+<td>0</td>
+<td>2</td>
+<td>1</td>
 </tr>
-<tr style="height: 36px;">
-<td style="width: 139px; height: 36px;">Milwuakee Bucks</td>
-<td style="width: 112px; height: 36px;">1</td>
+<tr>
+<td>13-T</td>
+<td>Oakland</td>
+<td>4</td>
+<td>3</td>
+<td>2</td>
+<td>-</td>
+<td>-</td>
+<td>9</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 36px;">
-<td style="width: 139px; height: 36px;">Oklahoma City Thunder</td>
-<td style="width: 112px; height: 36px;">1</td>
+<tr>
+<td>14-T</td>
+<td>Dallas</td>
+<td>0</td>
+<td>1</td>
+<td>6</td>
+<td>1</td>
+<td>0</td>
+<td>8</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 40.5px;">
-<td style="width: 139px; height: 40.5px;">Sacramento Kings</td>
-<td style="width: 112px; height: 40.5px;">1</td>
+<tr>
+<td>14-T</td>
+<td>Minneapolis</td>
+<td>2</td>
+<td>5</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+<td>8</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
-<tr style="height: 40.5px;">
-<td style="width: 139px; height: 40.5px;">Washington Wizards</td>
-<td style="width: 112px; height: 40.5px;">
-<p>1</p>
-</td>
+<tr>
+<td>17-T</td>
+<td>Miami</td>
+<td>2</td>
+<td>3</td>
+<td>2</td>
+<td>0</td>
+<td>0</td>
+<td>7</td>
+<td>-</td>
+<td>0</td>
+<td>4</td>
 </tr>
-<tr style="height: 40.5px;">
-<td style="width: 139px; height: 40.5px;">Portland Trail Blazers</td>
-<td style="width: 112px; height: 40.5px;">
-<p>1</p>
-</td>
+<tr>
+<td>17-T</td>
+<td>Houston</td>
+<td>1</td>
+<td>2</td>
+<td>2</td>
+<td>-</td>
+<td>2</td>
+<td>7</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>18</td>
+<td>Denver</td>
+<td>0</td>
+<td>0</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>6</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+</tr>
+<tr>
+<td>20-T</td>
+<td>San Antonio</td>
+<td>-</td>
+<td>5</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>5</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>20-T</td>
+<td>Cincinnati</td>
+<td>5</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>5</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>20-T</td>
+<td>Kansas City</td>
+<td>2</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>2</td>
+<td>5</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>23</td>
+<td>Seattle</td>
+<td>0</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+<td>4</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+</tr>
+<tr>
+<td>24</td>
+<td>Newark</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>3</td>
+<td>-</td>
+<td>3</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+</tr>
+<tr>
+<td>25-T</td>
+<td>Anaheim</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>2</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>25-T</td>
+<td>Buffalo</td>
+<td>-</td>
+<td>-</td>
+<td>2</td>
+<td>0</td>
+<td>-</td>
+<td>2</td>
+<td>-</td>
+<td>0</td>
+<td>4</td>
+</tr>
+<tr>
+<td>25-T</td>
+<td>Canton</td>
+<td>-</td>
+<td>-</td>
+<td>2</td>
+<td>-</td>
+<td>-</td>
+<td>2</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>25-T</td>
+<td>Milwaukee</td>
+<td>1</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>2</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>25-T</td>
+<td>Tampa</td>
+<td>0</td>
+<td>-</td>
+<td>1</td>
+<td>1</td>
+<td>0</td>
+<td>2</td>
+<td>5</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>25-T</td>
+<td>San Jose</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>2</td>
+<td>2</td>
+<td>4</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>25-T</td>
+<td>Portland</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>2</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Akron</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Atlanta</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>New Orleans</td>
+<td>-</td>
+<td>0</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Phoenix</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>1</td>
+<td>3</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Providence</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Raleigh</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Rochester</td>
+<td>0</td>
+<td>1</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>1</td>
+<td>4</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>San Diego</td>
+<td>0</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Syracuse</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Columbus</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>1</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Salt Lake City</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>32-T</td>
+<td>Indianapolis</td>
+<td>-</td>
+<td>0</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Charlotte</td>
+<td>-</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Jacksonville</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Memphis</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Nashville</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>0</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Oklahoma City</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Orlando</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>0</td>
+<td>2</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Sacramento</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>0</td>
+<td>-</td>
+<td>-</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Albany</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Grand Rapids</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>NR</td>
+<td>Spokane</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>1</td>
+<td>-</td>
+<td>-</td>
 </tr>
 </tbody>
 </table>
-<table class="topright" style="height: 783px; border-color: red; margin-left: auto; margin-right: auto; width: 249px;" border="3">
-<tbody>
-<tr>
-<td style="width: 119px;">Team:</td>
-<td style="width: 110px;">Number of NFL Championships</td>
-</tr>
-<tr>
-<td style="width: 119px;">Pittsburg Steelers</td>
-<td style="width: 110px;">&nbsp;6</td>
-</tr>
-<tr>
-<td style="width: 119px;"><strong><span style="color: #0000ff;">New England Patriots</span></strong></td>
-<td style="width: 110px;"><strong><span style="color: #0000ff;">&nbsp;5</span></strong></td>
-</tr>
-<tr>
-<td style="width: 119px;">Dallas Cowboys&nbsp;</td>
-<td style="width: 110px;">&nbsp;5</td>
-</tr>
-<tr>
-<td style="width: 119px;">San Francisco 49ers&nbsp;</td>
-<td style="width: 110px;">&nbsp;5</td>
-</tr>
-<tr>
-<td style="width: 119px;">Ney York Giants</td>
-<td style="width: 110px;">&nbsp;4</td>
-</tr>
-<tr>
-<td style="width: 119px;">Green Bay Packers&nbsp;</td>
-<td style="width: 110px;">&nbsp;4&nbsp;</td>
-</tr>
-<tr>
-<td style="width: 119px;">Denver Broncos&nbsp;</td>
-<td style="width: 110px;">&nbsp;3</td>
-</tr>
-<tr>
-<td style="width: 119px;">Oakland Raiders</td>
-<td style="width: 110px;">&nbsp;3</td>
-</tr>
-<tr>
-<td style="width: 119px;">Washington Redskins</td>
-<td style="width: 110px;">&nbsp;3</td>
-</tr>
-<tr>
-<td style="width: 119px;">Miami Dolphins&nbsp;</td>
-<td style="width: 110px;">&nbsp;2</td>
-</tr>
-<tr>
-<td style="width: 119px;">Indianapolis Colts&nbsp;</td>
-<td style="width: 110px;">&nbsp;2&nbsp;</td>
-</tr>
-<tr>
-<td style="width: 119px;">Baltimore Ravens</td>
-<td style="width: 110px;">&nbsp;2</td>
-</tr>
-<tr>
-<td style="width: 119px;">New Orleans Saints</td>
-<td style="width: 110px;">&nbsp;1</td>
-</tr>
-<tr>
-<td style="width: 119px;">Ney York Jets</td>
-<td style="width: 110px;">&nbsp;1</td>
-</tr>
-<tr>
-<td style="width: 119px;">Tampa Bay Bucaneers</td>
-<td style="width: 110px;">&nbsp;1</td>
-</tr>
-<tr>
-<td style="width: 119px;">Chicago Bears</td>
-<td style="width: 110px;">&nbsp;1</td>
-</tr>
-<tr>
-<td style="width: 119px;">Kansas City Cheifs</td>
-<td style="width: 110px;">&nbsp;1</td>
-</tr>
-<tr>
-<td style="width: 119px;">Los Angeles Rams</td>
-<td style="width: 110px;">&nbsp;1</td>
-</tr>
-<tr>
-<td style="width: 119px;">Seattle Seahawks</td>
-<td style="width: 110px;">&nbsp;1</td>
-</tr>
-</tbody>
-</table>
-
-</body>
-</html>
