--- a/java-in-html.html
+++ b/java-in-html.html
@@ -10,22 +10,15 @@
 text-align: center;
 margin-left: auto;
 margin-right: auto;
+border-color: white;
+border-style: inset;
+color:white;
 }
-
-table:after {
-      content: "";
-      background: url(https://images.fineartamerica.com/images-medium-large-5/boston-sports-fan-recycled-vintage-massachusetts-license-plate-art-patriots-red-sox-bruins-celtics-design-turnpike.jpg) repeat;
-      opacity: 0.3; 
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      position: absolute;
-      z-index: -1;   
+ .center{ 
+text-align: center;
     }
-
 </style>
-<table border ="3" >
+<table border="3" background= "https://images.fineartamerica.com/images-medium-large-5/boston-sports-fan-recycled-vintage-massachusetts-license-plate-art-patriots-red-sox-bruins-celtics-design-turnpike.jpg" >
 <tbody>
 <tr>
 <th>Rank</th>
