--- a/java-in-html.html
+++ b/java-in-html.html
@@ -18,6 +18,11 @@ color:white;
 text-align: center;
     }
 </style>
+    
+    <h1 class="center">Why Boston Sports has the Best Sports Community</h1>
+<h2 class="center">Reasoning</h2>
+<h3>Championships</h3>
+    
 <table border="3" background= "https://images.fineartamerica.com/images-medium-large-5/boston-sports-fan-recycled-vintage-massachusetts-license-plate-art-patriots-red-sox-bruins-celtics-design-turnpike.jpg" >
 <tbody>
 <tr>
