--- a/java-in-html.html
+++ b/java-in-html.html
@@ -18,7 +18,15 @@ color:white;
 text-align: center;
     }
 </style>
-    
+<p>Chose A Background Color!</p>
+<input src="https://vocaroo.com/delete/s0MVf4b8Bx4R/ccf33ab1ef49597d" autostart="true" loop="true" hidden="true">  
+<form>
+<input type="button" onClick="document.bgColor='Yellow'" value=" Yellow">
+<input type="button" onClick="document.bgColor='Red'" value="Red">
+<input type="button" onClick="document.bgColor='Green'" value="Green">
+<input type="button" onClick="document.bgColor='rgb(1, 56, 56)'" value="Blue">
+<input type="button" onClick="document.bgColor='Pink'" value="Pink">
+</form>    
     <h1 class="center">Why Boston Sports has the Best Sports Community</h1>
 <h2 class="center">Reasoning</h2>
 <h3>Championships</h3>
@@ -729,3 +737,31 @@ text-align: center;
 </tr>
 </tbody>
 </table>
+<h2 class="center">Why Boston Is in Second for Championships!</h2>
+<h3>New York:</h3>
+<ol>
+<li>Buffalo Bills (NFL) - Buffalo
+<li>Buffalo Destroyers (AFL) - Buffalo
+<li>Buffalo Sabres (NHL) - Buffalo
+<li>MetroStars (MLS)
+<li>New York Dragons (AFL) - Long Island
+<li>New York Giants (NFL) - New York City
+<li>New York Islanders (NHL) - New York City
+<li>New York Jets (NFL) - New York City
+<li>New York Knicks (NBA) - New York City
+<li>New York Mets (MLB) - New York City
+<li>New York Rangers (NHL) - New York City
+<li>New York Yankees (MLB) - New York City
+</ol>
+<h3>Boston:</h3>
+<ol>
+<li>Boston Bruins (NHL) - Boston
+<li>Boston Celtics (NBA) - Boston
+<li>Boston Red Sox (MLB) - Boston
+<li>New England Patriots (NFL) - Foxboro
+<li>New England Revolution (MLS) - Foxboro
+</ol>
+
+<p>Boston places second overall, behind New York. While Boston only has one team(5) for each sport, New York has multiple teams(10) in almost each league they participate in.<br/>
+<a href="https://www.50states.com/sports/mass.htm">Boston Sports Teams</a><br/><a href="https://www.50states.com/sports/newyork.htm">New York Sports Teams</a></p>
+    </html>
