--- a/java-in-html.html
+++ b/java-in-html.html
@@ -43,8 +43,7 @@ text-align: center;
     <ul>
     <li><a href= "#champ"> Championships</a></li>
     <li><a href= "#fan"> Fans and Community</a></li>
-    <li><a href= "#champ"> Championships</a></li>
-    <li><a href= "#champ"> Championships</a></li>
+    <li><a href= "#why"> WHY?</a></li>
     </ul>
 </div>
 <h2 class="center">Reasoning</h2>
@@ -808,6 +807,21 @@ text-align: center;
 <h3>Strength</h3>
 
     <p><center>Boston has some of the strongest fans in all of the leagues. In New England, the temperature is radical and with 4 different seasons fans have to be willing to go through a lot to watch their favorits sports team. On January 10, 2004, the Tennessee Titans came to Gillette Stadium in Foxborough to play an AFC Divisional Playoff game. Temperatures were in the single digits. Fans had runny noses but still attended. Tailgators created fires shivering in blankets. Struggling through what felt like 10-12 below zero the stadium was almost packed. Over 68,000 fans in attendance, the Pats would won 17-14 thanks to a late 46-yard field goal by Adam Vinatieri.<br/><a href ="https://www.fox25boston.com/sports/nfl/new-england-patriots/new-england-patriots-coldest-game-2004-in-foxborough-against-titans/670610415">25 Fox News</a></center></p>
+<h2 class="center" id="why">Why Does Everyone Dislikes Boston?</h2>
+<a href="https://www.foxsports.com/nfl/gallery/main-reasons-people-hate-new-england-patriots-092116"><center><img src="https://b.fssta.com/uploads/content/dam/fsdigital/fscom/buzzer/images/2016/08/11/17/18/092116-Edelman-Gronkowski-Amendola.vadapt.767.high.0.jpg" alt="Pats celebrating after touchdown" width="600"></center></a>
+<p class = "center">Although Boston dominates in almost all leagues, The most hated team by far are the Patriots! The "Pats" have many reasons to be hated, cheating in various forms, whining to the refs, possible bias refs, their dominance in the league and many more. According to <a href="https://www.foxsports.com/nfl/gallery/main-reasons-people-hate-new-england-patriots-092116">FOX</a> sports they have the 11 most popular reasons why the Patriots are hated</p>
 
+<h3>Rule Bending</h3>
+<p>Most teams use strategic pick plays to help their receivers get free, if offensive players intentionally initiate contact beyond one yard is it illegal. The Patriots certainly test officials’ judgment of intent by frequently running routes to try and trip up defenders. </p>
+
+<h3>The "Gates"</h3>
+<p>The Patriots always seem to scheme of something foul and many critics believe the league has never adequately punished them for their violations. The Deflategate cost the Patriots their 2016 first-round draft pick and $1 million, plus however much Brady paid in legal fees fighting the suspension. He also ultimately lost his right to play in the first four games of this season and may not communicate with the team either. The spygate also caused the Patriots troubles when illegaly listening to opposing teams conversations with hidden mics in their lockeroom.</p>
+<h3>The Patriots Bias</h3>
+<p> The Patriots play in more prime-time games than the Tennessee Titans. The team's “pursuit of perfection” in their undefeated regular season in 2007 was a definite season to watch.The Patriots typically gain more pageviews than stories about other teams.</p>
+<h3>The Fans</h3>
+<p>The Fans of the Patriots/ New England teams strive for the greates and "Get the Job Done". They know that winning in Boston is common and that sharing that with the rest of the community is their favorite.</p>
+
+<a href="#top">Back To Directory</a>
+
+</html>
     
-    </html>
